freest/test/prog/Invalid/Scoping/MultipleKindSigs/MultipleKindSigs.fst
module MultipleKindSigs where

type Foo : *T
type Foo : 1T -> 1T
